[workspace]
members = [
    "core",
    "cli",
    "golden",
]

# for workspace, we need to specify resolver explicitly.
resolver = "2"

[workspace.package]
version = "0.16.0-dev"
authors = ["xkikeg"]
edition = "2021"
rust-version = "1.81.0"
license = "MIT"
repository = "https://github.com/xkikeg/okane"

[workspace.dependencies]
# dependencies
bumpalo = {version = "3.17", features = ["collections", "boxed"]}
chrono = "0.4.40"
log = "0.4"
pretty_decimal = { version = "0.2.1", features = ["bounded-static"] }
regex = "1.11"
rust_decimal = "1.37"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
winnow = "0.7.6"

# middle
env_logger = "0.11"
lazy_static = "1.5"

# dev-dependencies
ctor = "0.4"
indoc = "2.0"
maplit = "1.0"
pretty_assertions = "1.4"
rstest = "0.25"
rust_decimal_macros = "1.37"

[profile.release]
lto = "thin"

[profile.bench]
debug = "limited"
