[workspace]
members = [
    "core",
    "cli",
]

# for workspace, we need to specify resolver explicitly.
# resolver = "3" enables MSRV-aware version selection, so `cargo install`
# (which re-resolves and ignores Cargo.lock) does not pick transitive deps
# requiring a newer rustc than our `rust-version`.
resolver = "3"

[workspace.package]
version = "0.19.0"
authors = ["kikeg"]
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
repository = "https://github.com/xkikeg/okane"

[workspace.dependencies]
# dependencies
anyhow = "1.0"
bumpalo = {version = "3.20", features = ["collections", "boxed"]}
chrono = "0.4.45"
lender = "0.7"
log = "0.4"
pretty_decimal = { version = "0.2.1", features = ["bounded-static"] }
regex = "1.12"
rust_decimal = "1.42"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0"
unicode-width = "0.2"
winnow = "1.0"

# middle
env_logger = "0.11"
lazy_static = "1.5"

# dev-dependencies
assert_matches = "1.5"
ctor = "1.0.7"
indoc = "2.0"
maplit = "1.0"
okane-golden = "0.2.1"
pretty_assertions = "1.4"
rstest = "0.26"
rust_decimal_macros = "1.40"

[profile.release]
lto = "thin"

[profile.bench]
debug = "limited"
