[package]
name = "okane"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
okane-core = { path = "../core" }
chrono.workspace = true
clap = { version = "4.5", features = ["derive", "unicode"] }
csv = "1"
either = "1"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
env_logger = "0.11"
lazy_static = "1.4"
log.workspace = true
path-slash = "0.2.1"
quick-xml = { version = "0.31", features = [ "serialize" ] }
regex = "1"
rust_decimal.workspace = true
serde = { version = "1.0", features = [ "derive" ] }
serde_with = { version = "3.7", features = [ "chrono" ] }
serde_yaml = "0.9.34"
strum = { version = "0.26", features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
# assert_fs = "1.0"
ctor = "0.2.7"
indoc.workspace = true
maplit.workspace = true
pretty_assertions.workspace = true
rust_decimal_macros.workspace = true
