[package]
name = "okane"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI tool to support Ledger (https://www.ledger-cli.org/) equivalent syntax files."
readme = "../README.md"
repository.workspace = true

[dependencies]
okane-core = { version = "0.14.0-dev", path = "../core" }

# anstream = "0.6"
bumpalo.workspace = true
chrono.workspace = true
clap = { version = "4.5", features = ["derive", "unicode"] }
csv = "1"
either = "1"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
env_logger.workspace = true
lazy_static.workspace = true
log.workspace = true
path-slash = "0.2.1"
quick-xml = { version = "0.37", features = [ "serialize" ] }
regex = "1"
rust_decimal.workspace = true
serde = { version = "1.0", features = [ "derive" ] }
serde_with = { version = "3.12", features = [ "chrono" ] }
serde_yaml = "0.9.34"
strum.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
# assert_fs = "1.0"
# assert_matches = "1.5"
ctor.workspace = true
indoc.workspace = true
maplit.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
rust_decimal_macros.workspace = true
shlex = "1.3"
