[package]
name = "okane"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI tool to support Ledger (https://www.ledger-cli.org/) equivalent syntax files."
readme = "../README.md"
repository.workspace = true

[dependencies]
okane-core = { version = "0.17.0", path = "../core" }

# anstream = "0.6"
bumpalo.workspace = true
chrono.workspace = true
clap = { version = "4.5", features = ["derive", "unicode"] }
csv = "1"
either = "1"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
env_logger.workspace = true
lazy_static.workspace = true
log.workspace = true
one-based = { version = "0.2.2", features = ["serde"] }
path-slash = "0.2.1"
pretty_decimal.workspace = true
quick-xml = { version = "0.38", features = [ "serialize" ] }
regex.workspace = true
rstest_reuse = "0.7.0"
rust_decimal.workspace = true
serde = { version = "1.0", features = [ "derive" ] }
serde_with = { version = "3.16", features = [ "chrono" ] }
serde_yaml = "0.9.34"
shadow-rs = { version = "1.4.0", default-features = false }
soft-canonicalize = { version = "0.5.3", features = [ "dunce" ] }
strum.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
okane-golden = { version = "0.2.0", path = "../golden" }

assert_cmd = "2.1"
# assert_fs = "1.0"
assert_matches = "1.5"
ctor.workspace = true
indoc.workspace = true
maplit.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
rust_decimal_macros.workspace = true
serde_test = "1.0"
shlex = "1.3"

[build-dependencies]
shadow-rs = "1.4.0"
