[package]
name = "okane-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Library to support parsing, emitting and processing Ledger (https://www.ledger-cli.org/) format files."
readme = "README.md"
repository.workspace = true

[dependencies]
annotate-snippets = "0.11"
bounded-static = { version = "0.8", default-features = false, features = ["derive", "alloc", "chrono"] }
bumpalo.workspace = true
chrono.workspace = true
derive-where = "1.2"
glob = "0.3.2"
log.workspace = true
rust_decimal.workspace = true
strum = { version = "0.26", features = ["derive"] }
thiserror.workspace = true
unicode-width = "0.2"
winnow.workspace = true

[dev-dependencies]
annotate-snippets = { version = "0.11", features = ["testing-colors"] }
ctor.workspace = true
env_logger.workspace = true
indoc.workspace = true
maplit.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
rust_decimal_macros.workspace = true
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
name = "report_bench"
harness = false

[[bench]]
name = "decimal_bench"
harness = false
