[package]
name = "okane-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Library to support parsing, emitting and processing Ledger (https://www.ledger-cli.org/) format files."
readme = "README.md"
repository.workspace = true

[dependencies]
annotate-snippets = "0.12.5"
bounded-static = { version = "0.8", default-features = false, features = ["derive", "alloc", "chrono"] }
bumpalo.workspace = true
chrono.workspace = true
derive-where = "1.6"
dunce = "1.0.5"
glob = "0.3.3"
itoa = "1"
log.workspace = true
pretty_decimal.workspace = true
rust_decimal.workspace = true
strum.workspace = true
thiserror.workspace = true
unicode-width = "0.2"
winnow.workspace = true

[dev-dependencies]
okane-golden = { version = "0.1.0", path = "../golden" }

annotate-snippets = { version = "0.12.5", features = ["testing-colors"] }
ctor.workspace = true
env_logger.workspace = true
indoc.workspace = true
maplit.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
rust_decimal_macros.workspace = true
criterion = {version = "0.7", features = ["html_reports"]}

[[bench]]
name = "report_bench"
harness = false

[[bench]]
name = "decimal_bench"
harness = false
