[package]
name = "okane-golden"
description = "simple library supporting Golden Testing"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pretty_assertions.workspace = true

[dev-dependencies]
regex.workspace = true
temp-env = "0.3.6"
test-temp-dir = "0.3.3"
