[package]
name = "okane-golden"
description = "simple library supporting Golden Testing"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pretty_assertions.workspace = true

[dev-dependencies]
regex.workspace = true
temp-env = "0.3.6"
tempfile = "3.22"
